--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -9,4 +9,4 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-custom: ['paypal.me/Mentionla','buymeacoff.ee/WSbA5oZ','https://612fund.hk/zh/donate']
+custom: ['paypal.me/Mentionla','buymeacoff.ee/WSbA5oZ','612fund.hk/zh/donate']
